MIJN-1118 Fix aanvragen alignment on the dashboard in responsive mode

--- a/src/components/MyCases/MyCases.module.scss
+++ b/src/components/MyCases/MyCases.module.scss
@@ -34,6 +34,10 @@
   &:nth-child(even) {
     margin-left: 5rem;
     flex-basis: calc(50% - 5rem);
+
+    @include media-query('<=phone') {
+      margin: 0;
+    }
   }
 
   a {
